# PointCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  user_study.sh
.github/workflows/: cmake-multi-platform.yml
data/: bunny.obj.cache
include/PointCloudEditor/: camera.hpp  cluster.hpp  eraser_tool.hpp  holefill_tool.hpp  point_cloud.hpp  ray.hpp  shader.hpp  sketch.hpp  spray_tool.hpp  surface.hpp  tool_util.hpp
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shader/: shader_point_cloud.frag  shader_point_cloud.geom  shader_point_cloud.vert  shader_sketch.frag  shader_sketch.vert
src/: camera.cpp  cluster.cpp  cluster.hpp  constants.hpp  delete_spray_tool.cpp  delete_spray_tool.hpp  delete_tool.cpp  delete_tool.hpp  eraser_tool.cpp  feature_tool.cpp  feature_tool.hpp  geometry.cpp  geometry.hpp  gui.cpp  gui.hpp  holefill_tool.cpp  interpolation_tool.cpp  interpolation_tool.hpp  main.cpp  mls_spray_tool.cpp  mls_spray_tool.hpp  model.hpp  modes.cpp  modes.hpp  octree.cpp  octree.hpp  outlier_tool.cpp  patch.cpp  patch.hpp  plane.cpp  plane.hpp  point_cloud.cpp  point_cloud.hpp  ray.cpp  ray.hpp  rbf.cpp  rbf.hpp  rbf_fill_tool.hpp  scratch_tool.cpp  scratch_tool.hpp  (+12 more)
